# ComfyUI-triXope

./: README.md  __init__.py  filmauteur_groups.js  filmauteur_ltxv.py  ltxv_eta_node.py  ltxv_eta_tracker.js  pyproject.toml  requirements.txt
workflows/: triXope Film Auteur (LTXV).json
