[project]
name = "ComfyUI-triXope"
description = "A collection of custom built ComfyUI nodes designed for film production pipelines."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["",]  # e.g.) ["numpy==1.18.1", ]

[project.urls]
Repository = "https://github.com/triXope/Comfyuio-triXope"

[tool.comfy]
PublisherId = "triXope"
DisplayName = "Comfyui-triXope"
Icon = ""
